# world-gen

./: Cargo.toml  README.md  build.rs
assets/data/presets/species/: human.species.preset.yml
assets/data/wordsets/: firstnames.wordset.yml  lastnames.wordset.yml
src/: common.rs  main.rs  params.rs  state.rs  time.rs
src/asset_types/: mod.rs  wordsets.rs
src/assets/: mod.rs  presets.rs  wordsets.rs
src/editor/: mod.rs
src/factions/: mod.rs
src/graphics/: menubar.rs  mod.rs  params.rs  pause.rs
src/graphics/editing/: common.rs  factions.rs  helpers.rs  map.rs  mod.rs  params.rs  person.rs  species.rs  time.rs
src/gui/: config.rs  ecs.rs  mod.rs  modal.rs  notifs.rs  sim.rs
src/gui/edit/: definitions.rs  helpers.rs  map.rs  meta.rs  mod.rs  people.rs  places.rs  widgets.rs
src/gui/edit/definitions/: afflictions.rs  mod.rs  species.rs  tile.rs
src/gui/view/: mod.rs  plots.rs
src/map/: cells.rs  coordinates.rs  create.rs  mod.rs
src/map/generation/: continent.rs  initial.rs  mod.rs  terrain.rs
src/people/: mod.rs  personality.rs
src/species/: mod.rs
src/world/: mod.rs  sim.rs  time.rs
src/world/common/: mod.rs
src/world/defs/: mod.rs  species.rs
src/world/event/: mod.rs
src/world/faction/: mod.rs
src/world/living/: afflictions.rs  health.rs  mod.rs
src/world/map/: coordinates.rs  mod.rs  tile.rs
src/world/map/generation/: mod.rs
src/world/person/: mod.rs
src/world/place/: mod.rs
src/world/presets/: bck_day.rs  bck_mon.rs  fwd_day.rs  fwd_mon.rs
src/world/schedules/: bck_day.rs  bck_mon.rs  fwd_day.rs  fwd_mon.rs  mod.rs
src/world/thing/: mod.rs
