[package]
name = "world-gen"
version = "0.1.0"
edition = "2021"

[features]
default = ["graphics"]
graphics = [
    "dep:bevy_egui",
    "dep:bevy_pancam",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_winit",
    "bevy/x11",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
]

[dependencies]
bevy = { version = "0.11.3", default-features = false, features=["multi-threaded", "bevy_asset"] }
bevy_egui = { version = "0.21.0", optional = true }
bevy_pancam = { version = "0.9.0", optional = true, features = ["bevy_egui"] }