[package]
name = "world-gen"
version = "0.1.0"
edition = "2021"

[features]
default = ["graphics"]
graphics = [
    "dep:bevy_egui",
    "dep:bevy_pancam",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_winit",
    "bevy/x11",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
]

[dependencies]
bevy = { version = "0.11.3", default-features = false, features=["multi-threaded", "bevy_asset"] }
bevy_common_assets = { version = "0.7.0", features = ["yaml"] }
serde = { version = "1.0.188", features = ["derive"] }
fastrand = "2.0.1"
bevy_egui = { version = "0.21.0", optional = true }
bevy_pancam = { version = "0.9.0", optional = true, features = ["bevy_egui"] }

[patch.crates-io]
# Patch out the serde_derive precompiled binary
# Commit number is the version pushed to crates.io
serde_derive = { git = "https://github.com/serde-rs/serde.git", commit = "dad15b9fd0bef97b7a7c90a8a165b6ffbc682cae" }

[build-dependencies]
copy_to_output = "2.1.0"
glob = "0.3.1"